[bot] Create Image & Tweet of Daily Mint

--- a/data/DailyMint/tweets/23-05-2022.md
+++ b/data/DailyMint/tweets/23-05-2022.md
@@ -2,14 +2,14 @@ Daily Mints in #SolanaNFT 🚀
 
 ⏰ Mint May 23
 
-15UTC @KidzTokyo
-16:30UTC @StonedBears_NFT
+14UTC @Baby_Reptilian
 17UTC @DeelerzNFT
+18UTC @SolanaApes
 18UTC @CyBasketballNFT
-18:30UTC @TheM0nsterClub
 19UTC @UnchainedNFT_
 20UTC @NftNoahsArk
 20UTC @DeadPiratess
+21UTC @Trippin_Cets
 
 🔗 thunft.com/daily-mint/solana
 
