[bot] Create Image & Tweet of Daily Mint

--- a/data/DailyMint/tweets/23-05-2022.md
+++ b/data/DailyMint/tweets/23-05-2022.md
@@ -2,7 +2,7 @@ Daily Mints in #SolanaNFT 🚀
 
 ⏰ Mint May 23
 
-14UTC @Baby_Reptilian
+15:35UTC @kingsofdastreet
 17UTC @DeelerzNFT
 18UTC @SolanaApes
 18UTC @CyBasketballNFT
