feat: improve algorithm for get images of daily mint.

--- a/data/DailyMint/tweets/08-06-2022.md
+++ b/data/DailyMint/tweets/08-06-2022.md
@@ -2,7 +2,7 @@ Daily Mints in #SolanaNFT 🚀
 
 ⏰ Mint Jun 08
 
-16UTC @metahuntersnft?s=21&t=MhHbjQCWaiLvs98JH6XxdA
+16UTC @metahuntersnft
 17UTC @PuffuPandas
 17UTC @solwowhotel
 19UTC @bakedbeans2420
